Update makefile for cp02

--- a/README
+++ b/README
@@ -1,9 +1,14 @@
-to run problemset a,b,c you can use the following commands:
+BUILD: to build everything
+    make -j6
 
-make a
-make b
-make c
+TEST: to run all tests for class project 2
+    make cp2
 
-to clean up afterwards
+to run individual a,b,c,d you can use the following commands:
+    make cp2a
+    make cp2b
+    make cp2c
+    make cp2d
 
-make clean
+CLEAN: to clean up afterwards
+    make clean
